<resources>
    <string name="app_name">Spray Quality Assessor</string>
    <string name="activity_camera_view">CameraViewActivity</string>
    <string name="activity_login">LoginActivity</string>
    <string name="activity_settings">SettingsActivity</string>
    <string name="activity_results">ResultsActivity</string>
    <string name="activity_accept_photo">AcceptPhotoActivity</string>

    <string name="switch_camera">Switch camera</string>
    <string name="login">Log In\n</string>
    <string name="register">Register\n</string>
    <string name="open_gallery">Open gallery</string>
    <string name="record_video">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="take_photo">Take Photo</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="vmd">VMD</string>
    <string name="rsf">RSF</string>
    <string name="nodroplets">Number of Droplets</string>
    <string name="coverage_percentage">Coverage Percentage</string>
    <string name="accept_photo">Accept photo\n</string>
    <string name="reject_photo">Reject photo\n</string>
    <string name="model_to_use">Segmentation model to use</string>
    <string name="width_hint"><font size="13">Width of the HydroPaper in cm</font></string>
    <string name="height_hint"><font size="13">Height of the HydroPaper in cm</font></string>

</resources>