<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:saveEnabled="false"
    app:layout_scrollEffect="none"
    tools:context=".activities.CameraViewActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="visible">

        <!-- Video Button -->
        <ImageButton
            android:id="@+id/btn_gallery"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/open_gallery"
            android:src="@drawable/gallery_button" />

        <ImageButton
            android:id="@+id/btn_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/take_photo"
            android:scaleType="centerInside"
            android:src="@drawable/photo_button" />

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings_button" />
    </LinearLayout>





</androidx.coordinatorlayout.widget.CoordinatorLayout>
